--- a/views/partials/rooms.html
+++ b/views/partials/rooms.html
@@ -1,1 +1,9 @@
 <h1>Rooms</h1>
+
+<ul>
+  {{ range $key := .rooms }}
+  <li>
+    <a href="/room/{{ $key }}">{{ $key }}</a>
+  </li>
+  {{ end }}
+</ul>
