--- a/views/room.html
+++ b/views/room.html
@@ -1,13 +1,15 @@
-<h1>Room - {{ .room }}</h1>
+<section id="content">
+  <h1>Room - {{ .room }}</h1>
 
-{{template "partials/messages" . }}
+  {{template "partials/messages" . }}
 
-<div hx-ext="ws" ws-connect="/ws/{{.room}}">
-  <div id="chat_room"></div>
+  <div hx-ext="ws" ws-connect="/ws/{{.room}}">
+    <div id="chat_room"></div>
 
-  <form id="form" ws-send>
-    <input type="hidden" name="room" value="{{.room}}" />
-    <input name="message" id="message" />
-    <button type="submit">Send</button>
-  </form>
-</div>
+    <form id="form" ws-send>
+      <input type="hidden" name="room" value="{{.room}}" />
+      <input name="message" id="message" />
+      <button type="submit">Send</button>
+    </form>
+  </div>
+</section>
