redirect on room creation

--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,8 @@
     <button type="submit">Signout</button>
   </form>
 
+  {{template "partials/room-form" .}}
+
   <ul>
     {{ range $key := .rooms }}
     <li>
