--- a/views/room.html
+++ b/views/room.html
@@ -1,9 +1,7 @@
 <section id="content">
   <h1>Room - {{ .room }}</h1>
 
-  <a href="/">Back</a>
-
-  {{template "partials/messages" . }}
+  {{template "partials/header" .}} {{template "partials/messages" . }}
 
   <div hx-ext="ws" ws-connect="/ws/{{.room}}">
     <div id="chat_room"></div>
