--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,7 @@
 <section id="content">
   <h1>Rooms</h1>
 
-  <form hx-post="/signout" method="post" hx-target="#content">
-    <button type="submit">Signout</button>
-  </form>
-
-  {{template "partials/room-form" .}}
+  {{template "partials/header" .}} {{template "partials/room-form" .}}
 
   <ul>
     {{ range $key := .rooms }}
